<resources>
    <string name="app_name">StudySchedule</string>
    <string name="timer">Timer</string>
    <string name="history">History</string>
    <string name="time">8:00 – 8:45</string>
    <string name="classes">Classes</string>
    <string name="homework">Homework</string>
    <string name="homeworkName">Literature</string>
    <string name="timeOut">2 days left</string>
    <string name="description">Read scenes 1.1–1,12 of The Master and Margarita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">schedule</string>
    <string name="main">main</string>

</resources>