<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#191919">

    <TextView
        android:id="@+id/homeworkNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/homeworkName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeOutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/timeOut"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/homeworkNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/homeworkNameTextView" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="170dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/timeOutTextView"
        app:layout_constraintTop_toBottomOf="@+id/timeOutTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>